fixed footer overflow

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,7 +15,7 @@ main {
     position: relative;
     width: 100%;
     height: calc(100% - 600px);
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 footer {
@@ -48,7 +48,7 @@ footer {
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 0.5fr 1fr 1fr;
     justify-items: center;
 
 }
@@ -57,9 +57,8 @@ footer {
     width: 100%;
     height: 100%;
     font-size: 3.5em;
-    text-align: left;
-    margin-left: 5%;
-    margin-top: 100px;
+    text-align: center;
+    margin-top: 50px;
 }
 
 /* input containers*/
@@ -71,6 +70,7 @@ footer {
     justify-items: center;
     align-content: center;
     width: 80%;
+    height: 100%;
 }
 
 .Destination-Input {
@@ -95,7 +95,8 @@ footer {
 }
 
 #route-button-container {
-
+    margin-top: 50px;
+    grid-row: 4;
 }
 
 #route_button {
